# llm-rag

./: .gitignore  main.py  openai_chat.ipynb  project1.ipynb  pyproject.toml  sample.ipynb
JupyterNB/: 01_EnvironmentKeys.ipynb  02_OpenAICall.ipynb  03_MultiLLMCall.ipynb  03_MultiLLMCallSystemPrompt.ipynb  experiment.ipynb  project1.ipynb
JupyterNoteBook/00_BasicSamples/: 000_sampleQuickPythonCodePractice.ipynb  02_OpenAICall(Local).ipynb  05_concept_offline_ollama(Local).ipynb  06_TokenisationSample.ipynb  OpenRouterFreeAPISample.ipynb  abstraction_layers.ipynb  sampleQuickPythonCodePractice.ipynb
JupyterNoteBook/02_RagSample/: final_rag_pipeline.ipynb
JupyterNoteBook/03_AgentSimulation/: enterprise_inventory.db  sql_agent.ipynb
JupyterNoteBook/04_MachineLearning/: 00_NLP_SentimentalAnalysis.ipynb
JupyterNoteBook/05-ANN_Application_Project(Pending Handson)/: 03_Predict_Customer_Churn.ipynb  dataScaler.pkl  trained_model.h5
JupyterNoteBook/06-RNN_APP_Project(Pending Handson)/: 1-Basic_RNN_Example.ipynb  2-Simple_RNN_Achitecture.ipynb  3-PreProcess_Sequential_Data.ipynb  4-Build_Simple_RNNApp.ipynb  5-Hyperparameterization_RNN.ipynb  6-Deploy_RNN_Model.ipynb  6.1-Deploy_RNN_App.py  7-CaseStudy-Electricity_Consumption.ipynb  7.1-Energy_Consumption_WebApp.py  8-Customer_Feedback_Review.ipynb  8.1-Sentiment_Analysis.py  Equity-SHRIRAMFIN-EQ.csv  energy_consumption.csv  energy_rnn_model.h5  footfall_rnn.h5  restaurant_footfall.csv  scaler_1.pkl  test.ipynb
JupyterNoteBook/09-ANN_Application_Project(Pending Handson)/: 02_Data_Modeling.ipynb  ANN_WebApp.py  (+4 more)
(+2 files in other folders)
