[project]
name = "llm-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "gradio>=6.18.0",
    "ipykernel>=7.2.0",
    "litellm>=1.89.1",
    "numpy>=2.4.6",
    "openai>=2.41.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "tiktoken>=0.13.0",
    "typing>=3.10.0.0",
]
